tests/error/this.gw
// [contains] keyword 'this' can be used only inside class definition...
 this;
